--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1",
+    "font-awesome": "^4.6.3",
+    "animate.css": "^3.5.2"
   }
 }
