--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 vendor/
 node_modules/
 /public/js/*
-/public/css/
-/public/fonts/
-/public/build/
+/public/css/*
+/public/fonts/*
+/public/build/*
 
 # Laravel 4 specific
 bootstrap/compiled.php
