--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 vendor/
-node_modules/
+#node_modules/
 /public/fonts/*
 /public/build/*
 
@@ -11,7 +11,6 @@ app/storage/
 bootstrap/cache/
 .env.*.php
 .env.php
-.env
 
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
