--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
     "font-awesome": "^4.6.3",
-    "animate.css": "^3.5.2"
+    "animate.css": "^3.5.2",
+    "datatables.net": "^1.10.13"
   }
 }
