--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ app/storage/
 # Laravel 5 & Lumen specific
 bootstrap/cache/
 .env.*.php
-.env.php
+.env
+.php
 
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
